added test files to jest in arrays in bae dsa

--- a/bae-dsa/5-arrays/arrays-exercises/package.json
+++ b/bae-dsa/5-arrays/arrays-exercises/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "ex1-findsum.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+    //"test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
